2014-12-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-change-subject): Really check whether the subject
	changed.

2014-12-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mailcap.el (mailcap-mime-data): Add doc-view-mode as a viewer for
	PDFs.
	(mailcap-view-mime): New function.

2014-12-01  Glenn Morris  <rgm@gnu.org>

	* gnus-cloud.el (gnus-cloud): Add :version tag.

2014-11-29  John Mastro <john.b.mastro@gmail.com>  (tiny change)

	* auth-source.el (auth-source-macos-keychain-search-items): Return
	result of `auth-source-macos-keychain-result-append' (bug#19074).

2014-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-use-idna):
	* gnus-sum.el (gnus-summary-idna-message):
	* message.el (message-use-idna):
	Protect against nil value for idna-program.

	* message.el (message-use-idna): Load Mule-UCS for XEmacs 21.4.

2014-11-25  Glenn Morris  <rgm@gnu.org>

	* gnus-start.el (gnus-save-newsrc-file-check-timestamp):
	Add :version tag.

2014-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-open-server): Warn unless encrypted.

	* nnimap.el (nnimap-open-connection-1): Warn unless encrypted.

2014-11-17  Albert Krewinkel  <albert@zeitkraut.de>

	* message.el (message-valid-fqdn-regexp): Add non-internaional new
	TLDs.

2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit-no-update): Don't query about
	discarding changes in ephemeral groups.

	* ietf-drums.el (ietf-drums-parse-address): Don't issue warnings about
	things the user isn't interested in.

2014-11-13  Julien Danjou  <jd@abydos>

	* gnus-notifications.el (gnus-notifications-notify): Provide both
	app-icon and image-path.

2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* gnus/mm-url.el (mm-url-encode-multipart-form-data):
	Restore to handle "multipart/form-data" by eww.

2014-11-07  Tassilo Horn  <tsdh@gnu.org>

	* gnus-start.el (gnus-activate-group): Fix typo reported by Tim
	Landscheidt.
