@@ -1,3 +1,9 @@
+2014-12-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-art.el (gnus-article-mime-handles): Refactored out into own
+	function for reuse.
+	(gnus-mime-buttonize-attachments-in-header): Adjusted.
+
 2014-12-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* message.el (message-change-subject): Really check whether the subject
@@ -13,7 +19,7 @@
 
 	* gnus-cloud.el (gnus-cloud): Add :version tag.
 
-2014-11-29  John Mastro <john.b.mastro@gmail.com>  (tiny change)
+2014-11-29  John Mastro  <john.b.mastro@gmail.com>  (tiny change)
 
 	* auth-source.el (auth-source-macos-keychain-search-items): Return
 	result of `auth-source-macos-keychain-result-append' (bug#19074).
